# labs-PA-23

./: README.md
0303_Afanasief_DV/lab1/: CMakeLists.txt
0303_Afanasief_DV/lab2/: CMakeLists.txt  report.docx
0303_Afanasief_DV/lab2/model/: Flows.cpp  Flows.h  Matrix.h
0303_Afanasief_DV/lab2/task2_1/: ThreadSafeQueue.h
0303_Afanasief_DV/lab2/task2_2/: ThreadSafeQueue.h
0303_Afanasief_DV/lab3/: CMakeLists.txt  main.cpp  report.docx
0303_Afanasief_DV/lab3/model/: Flows.cpp  Flows.h  Matrix.cpp  MultiplicationMatrix.cpp
0303_Afanasief_DV/lab3/queue/: queue.h
0303_Afanasief_DV/lab4/: CMakeLists.txt  main.cpp  report.docx
0303_Afanasief_DV/lab4/model/: Matrix.cpp  Matrix.h  MultiplicationMatrix.cpp  MultiplicationMatrix.h
0303_Afanasief_DV/lab6/: CMakeLists.txt  main.cpp  matrix.cl  report.docx
0303_Davydov_MD_lab1/processes/: A_MATRIX.txt  C.txt  CMakeLists.txt  CalculateProcess.cpp  CalculateProcess.h  ErrorWriter.cpp  ErrorWriter.h  Process.h  ReadProcess.cpp  ReadProcess.h  SharedMemory.cpp  SharedMemory.h  WriteProcess.cpp  WriteProcess.h  definitions.h  main.cpp
0303_Davydov_MD_lab1/pthreads/: B_MATRIX.txt  CMakeLists.txt  C_MATRIX.txt  main.cpp  threads.cpp  threads.h
0303_Davydov_MD_lab1/threads/: A_MATRIX.txt  B_MATRIX.txt  CMakeLists.txt  C_MATRIX.txt  main.cpp  threads.cpp  (+1 more)
0303_Davydov_MD_lb5/: main.cpp  mandelbrot.cl  mandelbrot.cpp  mandelbrot.h
0303_Davydov_MD_lb6/: m_mult.cl  main.cpp  matrix.cpp  matrix.h
0303_Kostebelova_EK/lab5/PA_lab5/: CMakeLists.txt  main.cpp  mandelbrot.cl
0303_Kostebelova_EK/lab5/PA_lab5/cl/: mandelbrot.cl
0303_Kurochkina_EA/lb6/src/: CMakeLists.txt  main.cpp
0303_Skiba_VV/lab1/: Cargo.toml  README.md
0303_Skiba_VV/lab1/src/: lib.rs
0303_Skiba_VV/lab2-3/: Cargo.toml  README.md  Report.docx
0303_Skiba_VV/lab2-3/src/: async_task_runner.rs  crossbeam_shared_queue.rs  custom_sync_primitieves.rs  lib.rs  lock_free_queue.rs  main.rs  my_basic_queue.rs  my_lock_free_queue.rs  my_shared_queue.rs  shared_queue_runner.rs  task_runner.rs
0303_Skiba_VV/lab2-3/src/orig_task/: mod.rs
0303_Skiba_VV/lab4/: Cargo.toml  README.md  Report.docx  build.rs
0303_Skiba_VV/lab4/src/: lib.rs  main.rs  mult.rs  par_mult.rs
0303_Tabakov_PL_lab1/: 0303_Tabakov_PL_Lab1_PA.odt
0303_Tabakov_PL_lab2/: 0303_Tabakov_PL_Lab2_PA.odt  output.txt
0303_Tabakov_PL_lab3/: 0303_Tabakov_PL_Lab3_PA.odt
0303_Tabakov_PL_lab4/: 0303_Tabakov_PL_lab4.odt
0303_Tabakov_PL_lab5/: 0303_Tabakov_PL_Lab5_PA.odt
0303_Tabakov_PL_lab5/OpenCLTest/: CMakeLists.txt  main.cpp  mandelbrot.cl  mandelbrot.cpp
0303_Tabakov_PL_lab5/OpenCLTest/assert/: assert_cl.cpp
0303_Tabakov_PL_lab5/OpenCLTest/engine/: Open_cl_engine.cpp
0303_Tabakov_PL_lab5/OpenCLTest/src/: CMakeLists.txt
0303_Tabakov_PL_lab5/OpenCLTest/src/include/: utils.hpp
0303_Tabakov_PL_lab5/OpenCLTest/src/utils/: build_program.cpp  invoke_kernel.cpp
0303_Tabakov_PL_lab6/: 0303_Tabakov_PL_Lab6_PA.odt  CMakeLists.txt  m_mult.cl  main.cpp  matrix.cpp  matrix.h  multiplicator.cl
0304_Alekseev_RV_lab3/: PA_0304_Alekseev_RV_lab3.odt
0304_Alekseev_RV_lab4/: PA_0304_Alekseev_RV_lab4.odt
0304_Alekseev_RV_lab5/: PA_0304_Alekseev_RV_lab5.odt
0304_Alekseev_RV_lab6/: PA_0304_Alekseev_RV_lab6.odt
0304_Aristarkhov_Ilya_lab1/: main1.1.cpp  main1.2.cpp  Аристархов_Илья_0304_LR1.docx
0304_Aristarkhov_Ilya_lab2/: Аристархов_Илья_0304_LR2.odt
0304_Aristarkhov_Ilya_lab2/Code/: CMakeLists.txt  main.cpp  test.sh  text_results.txt
0304_Aristarkhov_Ilya_lab2/Code/model/: Square_matrix.cpp  Square_matrix.h
0304_Aristarkhov_Ilya_lab2/Code/model/queue/: Thread_safe_queue.h
0304_Aristarkhov_Ilya_lab2/Code/model/queue/impl/: Thread_safe_queue_impl.h  Thread_safe_queue_impl_fine.h
0304_Aristarkhov_Ilya_lab2/Code/thread/: Matrix_threading.cpp  Matrix_threading.h
0304_Aristarkhov_Ilya_lab3/: CMakeLists.txt  main.cpp  test.sh  Аристархов_Илья_0304_LR3.docx
0304_Aristarkhov_Ilya_lab3/model/: Lock_free_queue.h
0304_Aristarkhov_Ilya_lab3/thread/: Matrix_threading.cpp  Matrix_threading.h
0304_Aristarkhov_Ilya_lab4/: CMakeLists.txt  main.cpp  Аристархов_Илья_0304_LR4.docx
0304_Aristarkhov_Ilya_lab5/: Аристархов_Илья_0304_LR5.docx
0304_Aristarkhov_Ilya_lab6/: Аристархов_Илья_0304_LR6.docx
0304_Aristarkhov_Ilya_lab6/code/: CMakeLists.txt  main.cpp  matrix_multiply.cl
0304_Aristarkhov_Ilya_lab6/code/engine/: Open_cl_engine.cpp  Open_cl_engine.h
0304_Aristarkhov_Ilya_lab6/code/strassen/model/: Square_matrix.h
0304_Aristarkhov_Ilya_lab6/code/strassen/thread/: Matrix_threading.cpp
0304_Astashonak_MS/: main.cpp
0304_Govoryushchenko_AV_lab1/: 0304_PA_Govoruyshchenko_LR1.odt
0304_Govoryushchenko_AV_lab2/: 0304_PA_Govoruyshchenko_LR2.odt
0304_Govoryushchenko_AV_lab3/: 0304_PA_Govoruyshchenko_LR3.odt
0304_Govoryushchenko_AV_lab4/: 0304_PA_Govoruyshchenko_LR4.odt
0304_Govoryushchenko_AV_lab5/: .~lock.0304_PA_Govoruyshchenko_LR5.odt#  0304_PA_Govoruyshchenko_LR5.odt
0304_Govoryushchenko_AV_lab5/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab5  main.cpp  mandelbrot.cl  mandelbrot.cpp  mandelbrot.h
0304_Govoryushchenko_AV_lab6/: 0304_PA_Govoruyshchenko_LR6.odt
0304_Lyulin_DV/: benchmark_lib.sh  lab.mk
0304_Lyulin_DV/lab5/: CMakeLists.txt  cl_func.cpp  cl_func.h  main.cpp  mandelbrot.cl  window.cpp  window.h
0304_Lyulin_DV/lab6/: CMakeLists.txt  cl_matr.cpp  cl_matr.h  main.cpp  matrix.cl
0304_Maksimenko_EM_lab3/: PA_0304_Maksimenko_EM_lab2.docx  PA_0304_Maksimenko_EM_lab3.docx
0304_Maksimenko_EM_lab4/: PA_0304_Maksimenko_EM_lab4.docx
0304_Maksimenko_EM_lab5/: PA_0304_Maksimenko_EM_lab5.docx
0304_Maksimenko_EM_lab6/: PA_0304_Maksimenko_EM_lab6.docx
0304_Nagibin_Igor_lb2/: 0304_Nagibin_Igor_LR2.odt
0304_Nagibin_Igor_lb3/: 0304_Nagibin_Igor_LR3.odt
0304_Nagibin_Igor_lb4/: 0304_Nagibin_Igor_LR4.odt
0304_Nagibin_Igor_lb5/: lb5_otchet.odt
0304_Nagibin_Igor_lb5/code/: CMakeLists.txt
0304_Nagibin_Igor_lb5/code/src/: main.cpp  mandelbrot.cl  mandelbrot_computer.cpp  mandelbrot_computer.h
0304_Nagibin_Igor_lb6/: 0304_Nagibin_Igor_LR6.odt
(+698 files in other folders)
